Pushed from Domino: /u/wadkars/ML_STREAMING_ONLINE_LEARNING/runs/61283b218a7ba050e52bf13f

--- a/src/3_Create_New_Model_Version.ipynb
+++ b/src/3_Create_New_Model_Version.ipynb
@@ -7,37 +7,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from exec_0_kafka_raw_data_publisher import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "b5b4804c-5664-499e-984a-a896c3466ac0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "initialize()"
+    "from exec_3_dataset_model_generator import *"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa1d00ef-e0be-4bd8-ac50-0b9d70164fb2",
+   "id": "b5b4804c-5664-499e-984a-a896c3466ac0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 91.60%\n",
-      "Recall: 0.977413\n",
-      "Initial Model Created\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "publish_data()"
+    "execute()"
    ]
   },
   {
