Pushed from Domino: /u/wadkars/ML_STREAMING_ONLINE_LEARNING/runs/61283b218a7ba050e52bf13f

--- a/src/1_Process_X_Data.ipynb
+++ b/src/1_Process_X_Data.ipynb
@@ -55,7 +55,87 @@
       "refreshing model\n",
       "Current Model Version 0\n",
       "300\n",
-      "{'x': {'v0': -1.4754480118826014, 'v1': 0.3328872761905298}, 'y_hat': False, 'uuid': '7d61332653b74955aef80c82838e4c8d', 'uid': '8174', 'y_real': True}\n"
+      "{'x': {'v0': -1.4754480118826014, 'v1': 0.3328872761905298}, 'y_hat': False, 'uuid': '7d61332653b74955aef80c82838e4c8d', 'uid': '8174', 'y_real': True}\n",
+      "refreshing model\n",
+      "Current Model Version 0\n",
+      "refreshing model\n",
+      "Current Model Version 0\n",
+      "refreshing model\n",
+      "Current Model Version 0\n",
+      "refreshing model\n",
+      "Current Model Version 0\n",
+      "refreshing model\n",
+      "Current Model Version 0\n",
+      "400\n",
+      "{'x': {'v0': -0.797576191722367, 'v1': 1.3008908986615062}, 'y_hat': False, 'uuid': 'a6f6fd8ff020474ebce49e08b500a49f', 'uid': '2352', 'y_real': True}\n",
+      "refreshing model\n",
+      "Current Model Version 0\n",
+      "refreshing model\n",
+      "Current Model Version 0\n",
+      "refreshing model\n",
+      "Current Model Version 0\n",
+      "refreshing model\n",
+      "Current Model Version 0\n",
+      "refreshing model\n",
+      "Current Model Version 0\n",
+      "refreshing model\n",
+      "Current Model Version 0\n",
+      "500\n",
+      "{'x': {'v0': 0.9295065334615562, 'v1': 2.1388813905369894}, 'y_hat': False, 'uuid': '0b73086f41ce48a88be9db8651dfa766', 'uid': '4788', 'y_real': True}\n",
+      "refreshing model\n",
+      "Current Model Version 0\n",
+      "refreshing model\n",
+      "Current Model Version 0\n",
+      "refreshing model\n",
+      "Current Model Version 0\n",
+      "refreshing model\n",
+      "Current Model Version 0\n",
+      "refreshing model\n",
+      "Current Model Version 0\n",
+      "600\n",
+      "{'x': {'v0': 0.845289209731844, 'v1': -0.46984370178133295}, 'y_hat': False, 'uuid': 'ce81ef1785b8459ba471b5343defd04a', 'uid': '9155', 'y_real': True}\n",
+      "refreshing model\n",
+      "Current Model Version 0\n",
+      "refreshing model\n",
+      "Current Model Version 0\n",
+      "refreshing model\n",
+      "Current Model Version 0\n",
+      "refreshing model\n",
+      "Current Model Version 0\n",
+      "refreshing model\n",
+      "Current Model Version 0\n",
+      "700\n",
+      "{'x': {'v0': -1.6937435397567957, 'v1': 0.45031390067992794}, 'y_hat': False, 'uuid': '4f38677c5d9e4b3eafbccf18648d0b27', 'uid': '667', 'y_real': True}\n",
+      "refreshing model\n",
+      "Current Model Version 0\n",
+      "refreshing model\n",
+      "Current Model Version 0\n",
+      "refreshing model\n",
+      "Current Model Version 0\n",
+      "refreshing model\n",
+      "Current Model Version 0\n",
+      "refreshing model\n",
+      "Current Model Version 0\n",
+      "800\n",
+      "{'x': {'v0': -1.9273929102958172, 'v1': 1.7070452214034386}, 'y_hat': False, 'uuid': '6b508e714df7427cad28daf6dbecfb0a', 'uid': '1066', 'y_real': False}\n",
+      "refreshing model\n",
+      "Current Model Version 0\n",
+      "refreshing model\n",
+      "Current Model Version 0\n",
+      "refreshing model\n",
+      "Current Model Version 0\n",
+      "refreshing model\n",
+      "Current Model Version 0\n",
+      "refreshing model\n",
+      "Current Model Version 0\n",
+      "refreshing model\n",
+      "Current Model Version 0\n",
+      "900\n",
+      "{'x': {'v0': -0.4371729568713766, 'v1': 0.41514838643027274}, 'y_hat': False, 'uuid': '376dc546f0ac49dd8f2e057a2b6ce65c', 'uid': '3435', 'y_real': False}\n",
+      "refreshing model\n",
+      "Current Model Version 0\n",
+      "refreshing model\n",
+      "Current Model Version 0\n"
      ]
     }
    ],
