--- a/src/3_Create_New_Model_Version.ipynb
+++ b/src/3_Create_New_Model_Version.ipynb
@@ -12,10 +12,421 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b5b4804c-5664-499e-984a-a896c3466ac0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deleting files #200\n",
+      "b919646cc2fd4028bb7da0a31485b201\n",
+      "d8a7bd452498437d94770a95e2d4e98e\n",
+      "922d18c7ccf1458d9b888518ee0a71f0\n",
+      "0d7f605386304709a5f2faa252c5e556\n",
+      "6c6264e7ef254b509ddc9a1d55f6d83d\n",
+      "d5bcc70ff51d49d39f130c3c4fda539b\n",
+      "d23d363226c34f2192c9504b30ad7dcb\n",
+      "28b6cb7800a74e11826020236fda3651\n",
+      "bcc6be371a814a52a9ddf971d06ae8de\n",
+      "f8f6606a942843db910389cff4aa25fe\n",
+      "229b75aa27a9445fb59c3ad43f6d777f\n",
+      "54fb8d20c3294cb6aa7666d9585703d9\n",
+      "85513d24e5ae43bb999e2be78733c175\n",
+      "758aa63d623a4344a44427e0e1846159\n",
+      "e025f49674d142e293306d5b8f29215e\n",
+      "016a60c60799418e9cdfcda287e4af6a\n",
+      "666004194817401c9f21f08eb998579f\n",
+      "02fe71c7bb6042659aa846ae7d8a3929\n",
+      "ae20ea84d5c9411c8a8af1a8e2fd2e5a\n",
+      "afd34db355fa41498e04177b941ea668\n",
+      "2764d4e9aed14b50af63374ddf2d12ca\n",
+      "e3a3ea12d0b24c80a7233e47d7bb81d0\n",
+      "930d1e1972304144b2f07d4e221b51a3\n",
+      "ba59ef80f1fd4cf091671cd95f559f28\n",
+      "fc12ebb75b884ceca71cfd99a4b493ba\n",
+      "446979ae33ac463a96125f0feea98790\n",
+      "46cae14e5b5f4f6f8defd135056efd0a\n",
+      "218b67a4704e426eb84d8e84e3a73958\n",
+      "d556f21004a44d06be6366da1186f1fb\n",
+      "7b904b54decd477a8e44a73cb3bf7bc4\n",
+      "d8cc11d88b6048dabc28d02ad13bf8d1\n",
+      "3081377ec590430e9b3ee35e4db0abb1\n",
+      "80628f6f19164e5a9d8638639bd4a0f1\n",
+      "472dd27b4be74d32970304f50b2d86c2\n",
+      "96d0cdeefd6d4ab3ba08ac17c825f5cc\n",
+      "b034b17c83eb4eeb942d92f91e2600d5\n",
+      "1afe500e22fd4364b843ca75af6092e8\n",
+      "594dc17e17254e03afed309c6952ab1b\n",
+      "8cfc61adc7ee4ba586711d6c748bc565\n",
+      "1b7a368b839e4b5a97e98f23e299bea7\n",
+      "1c30663d33b24495af2ceaf349d1df6e\n",
+      "289ffb7e2dd8407e8d81b76e109906d7\n",
+      "0d3848ec170c4d35a7d241dc99694d92\n",
+      "8fea626b4e3142fc8b102653f08e3b09\n",
+      "e26becabe6e4464aaa3ae8d0be04c718\n",
+      "16a4d1f6ae35432f89d9291102446a93\n",
+      "3c649b2d7e97482282c6d2e6200d4797\n",
+      "e32b8da253014343ad6b42f684401d8d\n",
+      "5a4be58c55bb4c699c7b6adf4ed27c59\n",
+      "eba3f388c00743688f33f1f860c7891d\n",
+      "08380a2b1ce74df9ba38c5dfd2492cf5\n",
+      "808a10d805f54f3f9c917cc54cd6c04a\n",
+      "d6462e319d74458b892442317a195d93\n",
+      "c8415d0f0a9a428a88289a0212e77067\n",
+      "f045461d41f44e4fab4146f7e2c9ce44\n",
+      "d63837f9703f4ef79549d2e6230d9088\n",
+      "acd3fc7556e44dbf93d956ae64520704\n",
+      "7773769f3dd849fd8b6c523265b778c7\n",
+      "c039f3aac24c47908691616231bfa55b\n",
+      "4c5a9d9a728c4b4da5515d5cbbd41352\n",
+      "bc1e0ec531e74ba7bbc9b9a3b8fbab00\n",
+      "6d628d0cc25f43a8b0e1de2260e02ad2\n",
+      "bc75f9b2e25c49da97e590b837aad70a\n",
+      "75d5af2e15d64bb58d55099698455724\n",
+      "78cf8d1d7ca043859f535cc52bfeaafd\n",
+      "557b7d6acb0b4ee688e5fecfa81a9314\n",
+      "5370a53adb194ece95cbed270438441c\n",
+      "df55d40be8c942e3a4524d0a6e491700\n",
+      "19e5c17279c247fb8e89c9c539850231\n",
+      "7bff900ba433479cbb292628ac71d51a\n",
+      "603be2b1357e4a328528efd95a9cb965\n",
+      "053be1799fd4416186343867ab433c9a\n",
+      "be74fff1e474415c8ef118c3eb554615\n",
+      "879149a49fe64d51919e5f4241007a10\n",
+      "57a4df81e5944199ad931374ad89bb9e\n",
+      "1af1c3123a234caeb643a84daeba86cd\n",
+      "97b6184e94be4ff880fc5226ddd7e800\n",
+      "05432747c1e24f0bb673793fc60c9fc6\n",
+      "6ba83f6859d0414eb73462138f60e0c6\n",
+      "0b05aa4f137a4758a6443356933c4fa2\n",
+      "63aec3974bdb47e5800aec6e8bbb7186\n",
+      "e91eeb404f914db781288945e3de469a\n",
+      "bb9b2440070e4a67bc1426f600632d02\n",
+      "dfba983c595c4ab6a630e8ba21a10493\n",
+      "2776554768bd4f9ebfa129d0e1bdddaa\n",
+      "be0946c4b953489bbd63abb6f2696f86\n",
+      "eba90a8d28ff48429fa2d59abc68c050\n",
+      "b2089a0b7b9944199c26d973749ae92a\n",
+      "4f5dfeb6eac842009d1647af4faa891e\n",
+      "0386895c70fe4514a8ca6af417ac02c5\n",
+      "7146399fe05349cd8aa7342e0caf1312\n",
+      "beb200246cd64e67844fde9849dde4bd\n",
+      "5112ce2e602b4219af889e63ee5cf3ba\n",
+      "e6c947b1c25f4f0d90959ab9e6d5bb2e\n",
+      "d9ddcde290994cb9aece5d2909f04b25\n",
+      "08e0345d0f3942119f6006f74cd0d9cd\n",
+      "4e87934240164b818488c69f469eba92\n",
+      "af469820709d4029bce1cdef83dc8e47\n",
+      "c37738a833104987a05bc297aee4b795\n",
+      "17b18e4ed56844a9a0550af3f7ceaec1\n",
+      "d72baf79dd4b407e86e4d2447aa939b5\n",
+      "774d4f5198d442f48363860320cb93fa\n",
+      "db46d72398d04c23b1eaaf95264d7d0d\n",
+      "080f851cf39c4bfd94fa1a0f9214699f\n",
+      "1f070d2dc4764b4da234cfbef5499e40\n",
+      "2da6b994aa7940a0bcfd680c60eb45d8\n",
+      "4ebee9b804ea409bb59ca12db408ba89\n",
+      "1cbf6164a0a94ff98dc0ab85e7100ee7\n",
+      "57d9cab0aa9146239e75400da1a1c632\n",
+      "a7bcba6b16924b0e80d493b4d46f908e\n",
+      "76a00b4e66444f93869449070662aa69\n",
+      "0101be0bc48040acba1d5db5e1ea1df0\n",
+      "902dbe45759c43aab5f0b25bc538495d\n",
+      "2d70e0542f96419da344b71330fca4ba\n",
+      "251230d89eee492e9c4e9f642bc047f6\n",
+      "bab2e4d2a1404b949e9471c24ab15e3e\n",
+      "0718a2845edd46969b04ad64e9ece7e2\n",
+      "e639d2f166fd439faf28a0a11d52592a\n",
+      "ddc5bd55fc6f480a919c88ad170e7af9\n",
+      "0045494d60314de08efcacec2296a806\n",
+      "099e3c3687194b609986b6902ab02796\n",
+      "364a1f26f0c34a8e8280ff48932c4cc9\n",
+      "1f15a20acca54eb8a2f07a684edf29ff\n",
+      "a8bfdbc7290349b68cc9147523b4f15f\n",
+      "ded8ca4e0aab4cee9e9fa3f8805d229e\n",
+      "600ef0eea2644cfeb84964980bd7653b\n",
+      "6934adcb8ae24d1b848b961ad62f529e\n",
+      "375d1121d99843caa6edec1fa34172d3\n",
+      "bca32a066b494edc89e4ab4bb9a33fe2\n",
+      "c0d0a081599b4da49ddee0194a8b4cb5\n",
+      "f82cfb1a84984d778186a2bda8a496e7\n",
+      "5de54f736bcc42898dbd0de4e6c8133a\n",
+      "3e046f8c89514b829da47dcb7c674990\n",
+      "568380ad8e354dfc82b0c0a41476c0e2\n",
+      "7e69f6d046064b069ff0e2ba590c3cf6\n",
+      "7f0fc067287f4eabbe76745105ab3d38\n",
+      "888478f317cb4adbafda8b2440d1f176\n",
+      "01b6331cdcb14f7ea2977960821d689c\n",
+      "1a97c0bd94f340ebb93f0c7611f87581\n",
+      "b0efb4a1a9b549bda0417c0c9b9c2952\n",
+      "3e1e370bd1014b64a97013c95d9cc543\n",
+      "da56ddfaa62c4b23acfc2b91746c4543\n",
+      "a8845b26757f4765b0dbb2f007635df1\n",
+      "7f19fa954b0940ceb97ad0a3dbe8f208\n",
+      "4613e3d619e54a21b63a34455df5831e\n",
+      "320c57d799934216a0c323101b354adb\n",
+      "6b610604470046029d997f28232c3bbf\n",
+      "ab950d25a2f746e280dccc143c7178ed\n",
+      "a4489c92d82e4b8ea293203889886b46\n",
+      "3f9996941cb64f49857106a2f822f940\n",
+      "ec8c5614eddb404a82b99ac641af435b\n",
+      "23d9e4442e4a44618fce3b133b6cf642\n",
+      "b7858e7d3c4f44c48f90ad58225e2e71\n",
+      "425213a291504cc9b16ad8c2ce0673b8\n",
+      "ae5e143e523a42e48a5fd549151cfa10\n",
+      "6c14457b0135406d8b0b660715b26df3\n",
+      "10fe2542369b4c9b85a6c95b287b4db0\n",
+      "0b99f57cd1af4f31a5b6435a5be591fd\n",
+      "cd9d166ecd6d4b608e58ef3861038d37\n",
+      "9a19c07abb944af49ba45b552f419e17\n",
+      "15a36006728945b4b41f97caee8a47cb\n",
+      "2e95e9b1d73c48979ce0d9940154c05c\n",
+      "f738ed0382ef4c82bae8de07aa25d066\n",
+      "638f938226034af681f8213040cfe704\n",
+      "a219eb90a22544888520293faf308c39\n",
+      "938a30d83593463588c86b6a30a465a3\n",
+      "78fb679d6dcf41c6829b9802ad864280\n",
+      "439f824790c7494cbfc9211f331eaefc\n",
+      "72a2f5d131c74e4597f81dad7d770d5e\n",
+      "ed791534a5834e888d1c4afaf41c6056\n",
+      "42d539611b344122bc6c0b8be60c532d\n",
+      "5e10ad1f9ee04d49bb81a215b4bc0bf3\n",
+      "54caf2a8a02c44f0b1cf36aa59738002\n",
+      "6c6cd6f73734421dbe89bc63dfb22372\n",
+      "12948db67ec4409e9341b3b33ffdf2a7\n",
+      "63e54fd8383840f29a337d17a0e01c9f\n",
+      "3b612c64b3534e06b3a1ebb0dad0114a\n",
+      "043ce0fa972c4c59bfa436723a7aa5c3\n",
+      "f41c8f1aaf654081a9b5eb9b2544c22a\n",
+      "20346db8d7fd4a6b90a34605d40ad465\n",
+      "f5f0d4b290604ae9b559202f2935a7f0\n",
+      "96007a122d1248589cd85e7b2a346350\n",
+      "4bd3cf48d7314eb2a18c1769313ffbd4\n",
+      "81cf72b31b184bde93e6ce5f36c46569\n",
+      "3c7a1e566d7d47b599c278b4ebb4b554\n",
+      "43341c2e56124502b74925ba9791a0b0\n",
+      "b06bb0c08c02416faef6b187b164bfd5\n",
+      "3b00c7c7dfc048b985f71666758435d1\n",
+      "04878d6abfaf45c8a917395f0ca12132\n",
+      "4375d60e8d684cbe8c9fdfa387e03e10\n",
+      "6f7363731ee44d21b1458613001512b3\n",
+      "8dd0cedb7916416e936010530953b5d3\n",
+      "f98d03ead6ee49048263a7801600aecc\n",
+      "ace9a1119ebf439ab97195d9335817de\n",
+      "39b0948e73c04f50a64c3f45c1db2861\n",
+      "78e1a1922b674cc2b083acfa761286df\n",
+      "8e75dd5950c641f38e21bd26835d2e29\n",
+      "f8f677f56ff343cc847ced2a102a833f\n",
+      "47af11a2601249f0a1ec54a3370d66ef\n",
+      "30cf2cc884534f47bc37fa20c5a44d8e\n",
+      "0\n",
+      "False-True\n",
+      "False-False\n",
+      "True-False\n",
+      "False-False\n",
+      "True-False\n",
+      "True-False\n",
+      "True-True\n",
+      "False-True\n",
+      "False-True\n",
+      "True-True\n",
+      "False-False\n",
+      "True-False\n",
+      "False-True\n",
+      "True-False\n",
+      "False-False\n",
+      "False-True\n",
+      "False-False\n",
+      "True-False\n",
+      "True-True\n",
+      "False-False\n",
+      "True-False\n",
+      "True-False\n",
+      "False-False\n",
+      "False-True\n",
+      "True-False\n",
+      "False-False\n",
+      "False-False\n",
+      "False-False\n",
+      "False-False\n",
+      "False-True\n",
+      "False-False\n",
+      "False-False\n",
+      "False-True\n",
+      "True-False\n",
+      "True-True\n",
+      "False-False\n",
+      "True-True\n",
+      "True-False\n",
+      "False-False\n",
+      "False-False\n",
+      "False-True\n",
+      "False-False\n",
+      "True-False\n",
+      "False-False\n",
+      "False-False\n",
+      "True-False\n",
+      "True-False\n",
+      "True-True\n",
+      "False-False\n",
+      "True-False\n",
+      "True-True\n",
+      "False-False\n",
+      "True-False\n",
+      "True-True\n",
+      "False-True\n",
+      "True-True\n",
+      "True-False\n",
+      "False-False\n",
+      "True-False\n",
+      "True-True\n",
+      "True-True\n",
+      "True-False\n",
+      "True-False\n",
+      "False-True\n",
+      "False-False\n",
+      "True-True\n",
+      "False-False\n",
+      "False-True\n",
+      "True-False\n",
+      "True-True\n",
+      "False-False\n",
+      "True-False\n",
+      "False-True\n",
+      "True-False\n",
+      "True-True\n",
+      "True-False\n",
+      "True-False\n",
+      "True-True\n",
+      "True-True\n",
+      "False-True\n",
+      "True-True\n",
+      "True-True\n",
+      "False-False\n",
+      "False-False\n",
+      "True-True\n",
+      "False-False\n",
+      "False-False\n",
+      "True-True\n",
+      "False-True\n",
+      "True-True\n",
+      "False-False\n",
+      "True-True\n",
+      "False-False\n",
+      "True-False\n",
+      "False-True\n",
+      "False-False\n",
+      "True-False\n",
+      "True-False\n",
+      "True-True\n",
+      "False-False\n",
+      "True-False\n",
+      "True-False\n",
+      "False-False\n",
+      "False-False\n",
+      "True-True\n",
+      "True-False\n",
+      "False-True\n",
+      "True-True\n",
+      "True-True\n",
+      "True-True\n",
+      "False-True\n",
+      "False-False\n",
+      "False-False\n",
+      "True-True\n",
+      "False-False\n",
+      "False-False\n",
+      "False-True\n",
+      "False-True\n",
+      "False-True\n",
+      "False-True\n",
+      "True-False\n",
+      "False-False\n",
+      "False-True\n",
+      "False-False\n",
+      "True-True\n",
+      "True-False\n",
+      "False-True\n",
+      "True-True\n",
+      "False-False\n",
+      "True-True\n",
+      "False-True\n",
+      "True-True\n",
+      "False-False\n",
+      "False-False\n",
+      "False-False\n",
+      "True-True\n",
+      "True-False\n",
+      "False-True\n",
+      "False-True\n",
+      "True-False\n",
+      "True-False\n",
+      "True-True\n",
+      "True-True\n",
+      "False-False\n",
+      "True-False\n",
+      "True-False\n",
+      "True-True\n",
+      "False-False\n",
+      "True-False\n",
+      "True-True\n",
+      "False-True\n",
+      "False-True\n",
+      "False-True\n",
+      "True-True\n",
+      "False-True\n",
+      "False-True\n",
+      "False-False\n",
+      "False-False\n",
+      "False-True\n",
+      "False-False\n",
+      "False-False\n",
+      "False-False\n",
+      "True-False\n",
+      "False-False\n",
+      "False-True\n",
+      "False-True\n",
+      "True-False\n",
+      "True-False\n",
+      "False-True\n",
+      "False-False\n",
+      "False-False\n",
+      "False-False\n",
+      "True-False\n",
+      "False-False\n",
+      "True-True\n",
+      "True-True\n",
+      "True-False\n",
+      "True-True\n",
+      "False-True\n",
+      "False-True\n",
+      "True-True\n",
+      "False-False\n",
+      "True-True\n",
+      "True-False\n",
+      "True-False\n",
+      "False-False\n",
+      "False-True\n",
+      "True-True\n",
+      "True-False\n",
+      "True-True\n",
+      "True-True\n",
+      "True-True\n",
+      "True-False\n",
+      "False-False\n",
+      "True-True\n",
+      "True-False\n",
+      "True-False\n",
+      "True-False\n",
+      "False-True\n",
+      "True-False\n",
+      "0.8533333333333334\n",
+      "0.8926746166950597\n"
+     ]
+    }
+   ],
    "source": [
     "execute()"
    ]
